--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -10,4 +10,14 @@ services:
           - ./:/home/node/app
         ports:
           - 4000:4000
-        command: bash -c "npm install && npm start"
+        command: bash -c "npm install && npm run db:migrate:latest && npm run db:seed:run && npm start"
+        links:
+            - db
+    db:
+        image: postgres
+        restart: always
+        environment:
+            POSTGRES_USER: elevenlabs
+            POSTGRES_PASSWORD: elevenlabs
+        ports:
+          - 5432:5432
