--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,20 @@
   "description": "",
   "main": "graphql.js",
   "scripts": {
-    "start": "node graphql.js"
+    "start": "node graphql.js",
+    "db:migrate:latest": "knex migrate:latest",
+    "db:seed:run": "knex seed:run"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.0.0-rc.0",
+    "axios": "^0.18.0",
     "graphql": "^0.13.2",
-    "graphql-import": "^0.6.0"
+    "graphql-import": "^0.6.0",
+    "knex": "^0.14.6",
+    "objection": "^1.1.10",
+    "pg": "^7.4.3"
   },
   "devDependencies": {
     "jest": "^23.1.0",
