--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "apollo-server": "^2.0.0-rc.0",
     "axios": "^0.18.0",
+    "dataloader": "^1.4.0",
     "graphql": "^0.13.2",
     "graphql-import": "^0.6.0",
     "knex": "^0.14.6",
