--- a/server/package.json
+++ b/server/package.json
@@ -4,21 +4,30 @@
   "description": "",
   "main": "graphql.js",
   "scripts": {
-    "start": "node graphql.js",
+    "start": "nodemon graphql.js",
     "db:migrate:latest": "knex migrate:latest",
     "db:seed:run": "knex seed:run"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.0.0-rc.0",
+    "apollo-server": "^2.0.0-rc.2",
     "axios": "^0.18.0",
+    "bcrypt": "^2.0.1",
+    "bcryptjs": "^2.4.3",
+    "cli-progress": "^2.0.0",
     "dataloader": "^1.4.0",
+    "express": "^4.16.3",
+    "fs-finder": "^1.8.1",
     "graphql": "^0.13.2",
-    "graphql-import": "^0.6.0",
+    "jsonwebtoken": "^8.3.0",
     "knex": "^0.14.6",
+    "knex-tiny-logger": "^1.0.4",
+    "morgan": "^1.9.0",
+    "nodemon": "^1.17.5",
     "objection": "^1.1.10",
-    "pg": "^7.4.3"
+    "pg": "^7.4.3",
+    "winston": "^3.0.0"
   },
   "devDependencies": {
     "jest": "^23.1.0",
